syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="UserAssetsInfo";
//Generated By BrewRobot:Fri Jun 24 10:23:31 CST 2016

message PBIFE_fund_loadUserAssetsInfo{
	///ife/fund/loadUserAssetsInfo.html

	string bankCode = 1; //,用户绑定银行卡所在行,String,不校验,否,

	string balanceY = 2; //,可用金额,BigDecimal,不校验,否,

	string balanceQ = 3; //,可取金额,BigDecimal,不校验,否,

	string freezeTotal = 4; //,冻结基恩,BigDecimal,不校验,否,

	string amount = 5; //,总余额,BigDecimal,不校验,否,

	string allUnit = 6; //,总持仓,BigDecimal,不校验,否,

	string yesterdayProfit = 7; //,昨日收益,BigDecimal,不校验,否,

	string allProfit = 8; //,累计收益,BigDecimal,不校验,否,

	string maturityProfitSum = 9; //,预期可实现收益,不校验,否

	string accreditedDiff = 10; //,合格投资者差额
}

message Ret_PBIFE_fund_loadUserAssetsInfo{
	///ife/fund/loadUserAssetsInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_fund_loadUserAssetsInfo data=3;


}

message REQ_PBIFE_fund_loadUserAssetsInfo{
	///ife/fund/loadUserAssetsInfo.html


}