syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname = "PrdQueryInterestPayDetailsPb";
//Generated By BrewRobot:Fri Jul 01 12:22:10 CST 2016

message PBIFE_prdquery_prdQueryInterestPayDetails {
    ///ife/prdquery/prdQueryInterestPayDetails.html
    message ProductCashAddInterestPay {
        string productCode = 1; //,产品编号,String,不校验,是,
        string productName = 2; //,产品名称,String,不校验,是,
        string seqNo = 3; //,付息周期,String,不校验,是,
        string startDate = 4; //,起息日,String,不校验,是,
        string endDate = 5; //,到期日,String,不校验,是,
        string payDate = 6; //,确权日,String,不校验,是,
        string payCashDate = 7; //,付息日,String,不校验,是,
        string deadline = 8; //,期限,String,不校验,是,
        string status = 9; //,状态,String,不校验,是,
        string statusName = 10; //,状态,String,不校验,是,
        string pripal = 11; //,本金,String,不校验,是,
        string income = 12; //,利息,String,不校验,是,
        string delayIncome = 13; //,延期利息,String,不校验,是,
        string totalAmount = 14; //,总金额,String,不校验,是,
        string firstEnd = 15; //,是否首末标志,String,不校验,是,
        string addIncome = 16; //,加息利息,String,不校验,是,
    }

    message TaUnitFinance {
        string id = 1; //,编号,String,不校验,是,
        string productCode = 2; //,产品编号,String,不校验,是,
        string shareholdersCode = 3; //,交易账户,String,不校验,是,
        string unit = 4; //,本金,String,不校验,是,
        string canTransferAmount = 5; //,可转让本金,String,不校验,是,
        string noTransferAmount = 6; //,不可转让本金,String,不校验,是,
        string gmtCreate = 7; //,创建时间,String,不校验,是,
        string gmtModify = 8; //,最后一次修改时间,String,不校验,是,
        string freeze = 9; //,冻结资产,String,不校验,是,
        string buyerSmallestAmount = 10; //,产品最少购买,String,不校验,是,
        string buyTotalAmount = 11; //,产品发行量,String,不校验,是,
        string buySmallestAmount = 12; //,最少购买,String,不校验,是,
        string buyRemainAmount = 13; //,最少持仓,String,不校验,是,
        string expectedMaxAnnualRate = 14; //,预期收益率,String,不校验,是,
        string tradeIncomeAll = 15; //,,String,不校验,是,
        string buyStartDate = 16; //,募集开始日,String,不校验,是,
        string buyEndDate = 17; //,募集结束日,String,不校验,是,
        string manageStartDate = 18; //,起息日,String,不校验,是,
        string manageEndDate = 19; //,结息日,String,不校验,是,
        string deadline = 20; //,,String,不校验,是,
        string unActualPriceIncreases = 21; //,,String,不校验,是,
        string unActualPrice = 22; //,,String,不校验,是,
        string unActualTradeApplyRate = 23; //,,String,不校验,是,
        string financeCode = 24; //,,String,不校验,是,
        string zsjRate = 25; //,,String,不校验,是,
        string currentRate = 26; //,,String,不校验,是,
        string transferFee = 27; //,,String,不校验,是,
        string productSubType = 28; //,,String,不校验,是,
        string tradeStartDate = 29; //,,String,不校验,是,
        string tradeEndDate = 30; //,,String,不校验,是,
        string leastHoldDays = 31; //,,String,不校验,是,
        string tradeLeastHoldDay = 32; //,,String,不校验,是,
        string status = 33; //,,String,不校验,是,
        string statusStr = 34; //,,String,不校验,是,
        string productType = 35; //,,String,不校验,是,
        string productName = 36; //,,String,不校验,是,
        string unitStatus = 37; //,状态,String,不校验,是,
        string delegationCode = 38; //,,String,不校验,是,
        string myHoldDays = 39; //,持有天数,String,不校验,是,
        string surplusHoldDays = 40; //,剩余持有天数,String,不校验,是,
        string annualDaysExpectIncome = 41; //,预期年化收益率,String,不校验,是,
        string myHoldDaysExpectIncome = 42; //,持有期预期收益,String,不校验,是,
        string saleableNumber = 43; //,获取可卖出的产品份额,String,不校验,是,
        string holderType = 44; //,限制交易期,String,不校验,是,
        string yearDay = 45; //,计息方式,String,不校验,是,
        string prodSubType = 46; //,产品小类,String,不校验,是,
        string computerClosedPeriod = 47; //,,String,不校验,是,
        string isTransfer = 48; //,是否可转让交易,String,不校验,是,
        string productCancel = 49; //,产品认购期是否允许撤单,String,不校验,是,
        string transBuy = 50; //,二级市场买入份额,String,不校验,是,
        string transSaling = 51; //,二级市场挂卖中份额,String,不校验,是,
        string optionType = 52; //,展期类型,String,不校验,是,
        string optionDateStart = 53; //,选择权公告开始日,String,不校验,是,
        string optionDateEnd = 54; //,选择权公告截止日,String,不校验,是,
        string holderFlag = 55; //,持仓查询标记,String,不校验,是,
        string leftDays = 56; //,已持有天数,String,不校验,是,
        string operType = 57; //,操作状态,String,不校验,是,
        string transferIsfloat = 58; //,转让是否支持浮动利率,String,不校验,是,
        string transferFloat = 59; //,转让浮动利率幅度,String,不校验,是,
        string transferFloatBegin = 60; //,转让浮动利率开始利率,String,不校验,是,
        string transferFloatEnd = 61; //,转让浮动利率结束利率,String,不校验,是,
        string discountRate = 62; //,转让折扣,String,不校验,是,
        string productStatusList = 63; //,产品状态条件,String,不校验,是,
        string orderBy = 64; //,排序字段,String,不校验,是,
        string orderAsc = 65; //,正反向排序,String,不校验,是,
        string gmtCreateStart = 66; //,查询起始日,String,不校验,是,
        string gmtCreateEnd = 67; //,查询终止日,String,不校验,是,
        string ifCanTransfer = 68; //,是否可以转让,String,不校验,是,
        string ifCanCancel = 69; //,是否可以撤销,String,不校验,是,
        string ifTimeChoose = 70; //,是否期限选择,String,不校验,是,
        string ifClosedPeriod = 71; //,是否封闭期,String,不校验,是,
        string leastTranAmount = 72; //,最低转让金额,String,不校验,是,
        string leastHoldAmount = 73; //,最低持有本金,String,不校验,是,
    }


    TaUnitFinance taUnitFinance = 1; //,持仓信息,taUnitFinance,不校验,是,

    repeated ProductCashAddInterestPay productCashAddInterestPayList = 2; //,付息计划列表,List,不校验,是,

    string totalIncome = 3; //,总收益,String,不校验,是,

    string currUsername = 4; //,查询人姓名,String,不校验,是,

    string currDateTime = 5; //,当前日期,String,不校验,是,

    string currDateZh = 6; //,当前日期,String,不校验,是,


}

message Ret_PBIFE_prdquery_prdQueryInterestPayDetails {
    ///ife/prdquery/prdQueryInterestPayDetails.html

    string returnCode = 1; //报文头

    string returnMsg = 2; //报文头

    PBIFE_prdquery_prdQueryInterestPayDetails data = 3;


}

message REQ_PBIFE_prdquery_prdQueryInterestPayDetails {
    ///ife/prdquery/prdQueryInterestPayDetails.html

    string id = 1; //,持仓ID,String,不校验,否,


}